--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+
+    <p>
+      Today I have for the most part handled activities related to my 
+      non-Amazon job.  I will work on fleshing out my project more, 
+      and perhaps work on studying datastructures or having a meeting 
+      with another prospective developer to work on a project together. 
+    </p>
+
     <script src="script.js"></script>
   </body>
 </html>
